# shader-compiler

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  launch.vs.json
Example/: common.glsl  example_shader.glsl  shader.glsl
cmake-modules/: copts.cmake  helper.cmake
glsl-compiler/: CMakeLists.txt  main.cpp  parseCompute.cpp  parseRasterization.cpp  parseRayTracer.cpp  parseRaytracer.cpp  parsers.h  utils.cpp  utils.h
spirv-reflection/: CMakeLists.txt  create-shader-structs.cpp  main.cpp  parser.cpp  spirv-reflection.h
